# grok-community-xdk

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt
.github/workflows/: python-lint.yml  python-test.yml
src/xai_grok/: __init__.py  grok.py
src/xai_grok/errors/: __init__.py  failed_to_parse_response_error.py  incomplete_request_error.py  invalid_api_key_provided_error.py  invalid_request_error.py  model_not_found_error.py  no_api_key_provided_error.py  unauthorized_user_error.py  unsupported_http_method_error.py
src/xai_grok/providers/: __init__.py  unauthorized_user_error_provider.py
src/xai_grok/schemas/: __init__.py  api_key.py  chat_message.py  chat_request.py  chat_response.py  choice.py  choice_message.py  complete_request.py  complete_request_metadata.py  complete_response.py  content_part.py  embedding.py  embedding_model.py  embedding_models.py  embedding_request.py  embedding_response.py  embedding_usage.py  function.py  function_tool_choice.py  image_url.py  language_model.py  language_models.py  logprob.py  logprobs.py  message.py  message_content.py  message_image_content.py  message_image_source.py  message_metadata.py  message_request.py  message_response.py  message_response_text_content.py  message_response_tool_use_content.py  message_text_content.py  message_tool.py  message_tool_choice.py  message_tool_input_schema.py  message_tool_result_content.py  message_usage.py  (+18 more)
test/: test_api_integration.py  test_grok.py
test/test_utils/: __init__.py  mock_response.py
