[project]
name = "xai-grok"
version = "0.0.1"
authors = [
  { name="Vikram Subbiah", email="45928972+tiovikram@users.noreply.github.com" },
]
description = "A community-maintained SDK (Standard Developer Kit) for XAI Grok models"
dependencies = [
		"annotated-types==0.7.0",
		"certifi==2025.1.31",
		"charset-normalizer==3.4.1",
		"idna==3.10",
		"pydantic==2.10.6",
		"pydantic_core==2.27.2",
		"requests==2.32.3",
		"typing_extensions==4.12.2",
		"urllib3==2.3.0",
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file="LICENSE" }
keywords = [ "xai", "xAI", "XAI", "grok", "Grok", "sdk", "SDK", "xdk", "XDK", "ai", "llm" ]

[project.urls]
Homepage = "https://github.com/tiovikram/grok-community-xdk"
Documentation = "https://github.com/tiovikram/grok-community-xdk/blob/master/README.md"
Repository = "https://github.com/tiovikram/grok-community-xdk"
Issues = "https://github.com/tiovikram/grok-community-xdk/issues"

[project.optional-dependencies]
test = [
		"annotated-types==0.7.0",
		"certifi==2025.1.31",
		"charset-normalizer==3.4.1",
		"idna==3.10",
		"iniconfig==2.0.0",
		"packaging==24.2",
		"pluggy==1.5.0",
		"pydantic==2.10.6",
		"pydantic_core==2.27.2",
		"pytest==8.3.4",
		"requests==2.32.3",
		"typing_extensions==4.12.2",
		"urllib3==2.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
